<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tesla"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/purchaseCarBtn"
        android:layout_width="271dp"
        android:layout_height="65dp"
        android:background="@color/white"
        android:onClick="purchaseCarBtn"
        android:text="@string/Purchase"
        android:textColor="@color/red"
        android:textSize="@dimen/buttonTextSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.466"
        tools:text="@string/Purchase" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="154dp"
        android:layout_height="54dp"
        android:layout_marginTop="184dp"
        android:background="@color/black"
        android:text="@string/Welcome"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/Welcome" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="53dp"
        android:layout_height="54dp"
        android:layout_marginTop="28dp"
        android:background="@color/black"
        android:text="@string/To"
        android:textColor="@color/white"
        android:textSize="@dimen/bigFontSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="@string/To" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="98dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:background="@color/black"
        android:text="@string/Tesla"
        android:textColor="@color/white"
        android:textSize="@dimen/bigFontSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.009"
        tools:text="@string/Tesla" />
</androidx.constraintlayout.widget.ConstraintLayout>